--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -61,6 +61,6 @@
     </table>
     <p>
         <a href="{% url 'shop:product_list' %}">Continue Shopping</a>
-        <a href="#">Checkout</a>
+        <a href="{% url 'orders:order_create' %}">Checkout</a>
     </p>
 {% endblock %}
