--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -60,7 +60,7 @@
         </tbody>
     </table>
     <p>
-        <a href="{% url 'shop:product_list' %}">Continue Shopping</a>
+        <a href="{% url 'mshop:product_list' %}">Continue Shopping</a>
         <a href="{% url 'orders:order_create' %}">Checkout</a>
     </p>
 {% endblock %}
