--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -51,14 +51,38 @@
                 </tr>
             {% endwith %}
         {% endfor %}
+        {% if cart.coupon %}
+            <tr class="subtotal">
+                <td>Subtotal</td>
+                <td colspan="4"></td>
+                <td class="num"> ${{ cart.get_total_price|floatformat:2 }}</td>
+
+            </tr>
+            <tr>
+                <td>
+                    "{{ cart.coupon.code }}" Coupon
+                    ({{ cart.get_discount }}% off)
+                </td>
+                <td colspan="4"></td>
+                <td class="num neg">
+                    - ${{ cart.get_discount|floatformat:2 }}
+                </td>
+            </tr>
+        {% endif %}
         <tr class="total">
             <td>Total</td>
             <td colspan="4"></td>
-            <td>${{ cart.get_total_price }}</td>
-
+            <td class="num">
+                ${{ cart.get_total_price_after_discount| floatformat:2 }}
+            </td>
         </tr>
         </tbody>
     </table>
+    <p>Apply a Coupon: </p>
+    <form action="{% url 'coupons:apply' %}" method="POST"> {% csrf_token %}
+        {{ coupons_apply_form }}
+        <input type="submit" value="apply"/>
+    </form>
     <p>
         <a href="{% url 'mshop:product_list' %}">Continue Shopping</a>
         <a href="{% url 'orders:order_create' %}">Checkout</a>
