--- a/templates/payment/process.html
+++ b/templates/payment/process.html
@@ -8,7 +8,7 @@
 {% block content %}
     <h1>Order Summary</h1>
     <table>
-    <thead>
+        <thead>
         <tr>
             <th>Image</th>
             <th>Product</th>
@@ -16,24 +16,45 @@
             <th>Quantity</th>
             <th>Total</th>
         </tr>
-    </thead>
-    <tbody>
-    {% for item in order.items.all %}
-        <tr>
-            <td>
-                <img src="{% if item.product.image %} {{ item.product.image.url }} {% else %} {% static 'imgs/no-image.jpg' %} {% endif %}" />
-            </td>
-            <td>{{ item.product.name }}</td>
-            <td>${{ item.price }}</td>
-            <td>{{ item.quantity }}</td>
-            <td>${{ item.get_cost }}</td>
-        </tr>
-    {% endfor %}
+        </thead>
+        <tbody>
+        {% for item in order.items.all %}
+            <tr>
+                <td>
+                    <img src="{% if item.product.image %} {{ item.product.image.url }} {% else %} {% static 'imgs/no-image.jpg' %} {% endif %}"/>
+                </td>
+                <td>{{ item.product.name }}</td>
+                <td>${{ item.price }}</td>
+                <td>{{ item.quantity }}</td>
+                <td>${{ item.get_cost }}</td>
+            </tr>
+        {% endfor %}
+        {% if order.coupon %}
+            <tr class="subtotal">
+                <td>Subtotal</td>
+                <td colspan="3"></td>
+                <td>${{ order.get_total_cost_before_discount|floatformat:2 }}</td>
+            </tr>
+            <tr>
+                <td>
+                    "{{ order.coupon.code }}" Coupon
+                    ({{ order.discount }}% off)
+                </td>
+                <td colspan="3"></td>
+                <td>
+                    - ${{ order.get_discount|floatformat:2 }}
+                </td>
+            </tr>
+        {% endif %}
         <tr class="total">
             <td>Total</td>
-            <td>${{ order.get_total_cost }}</td>
+            <td colspan="3"></td>
+            <td class="num">
+                ${{ order.get_total_cost|floatformat:2 }}
+            </td>
+
         </tr>
-    </tbody>
+        </tbody>
     </table>
     <form action="{% url 'payment:process' %}" method="POST"> {% csrf_token %}
         <input type="submit" value="Pay Now"/>
